Adds grunt to uglify the js, changes the README file

--- a/web/index.html
+++ b/web/index.html
@@ -17,16 +17,20 @@
     <!-- ANGULAR JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script>
     <script src="config.js"></script>
-    <script src="constants.js"></script>
+    <script src="constants.js"></script> -->
 
 
     <!-- SERVICES -->
-    <script src="services/MainService.js"></script>
+    <!-- <script src="services/MainService.js"></script> -->
 
     <!-- CONTROLLERS -->
-    <script src="controllers/MainController.js"></script>
+    <!-- <script src="controllers/MainController.js"></script> -->
+    <!-- <script src="controllers/MainController.min.js"></script> -->
+
+
+    <script src="dist/Main.min.js" charset="utf-8"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
